# Registry

./: .gitignore  CMakeLists.txt  Registry.sln  generate_project.bat
Registry/: CMakeLists.txt  Registry.vcxproj
Registry/include/: Registry.hpp
Registry/src/: Registry.cpp
